@startuml client_layer1_domain
title Arrow Maze Cliente — Capa 1: Dominio

skinparam backgroundColor #FFFFFF
skinparam class {
  BackgroundColor #E0F2F1
  BorderColor #00695C
  HeaderBackgroundColor #00897B
  HeaderFontColor #FFFFFF
  FontColor #000000
  ArrowColor #333333
}
skinparam interface {
  BackgroundColor #E3F2FD
  BorderColor #1565C0
  HeaderBackgroundColor #1E88E5
  HeaderFontColor #FFFFFF
}
skinparam abstract {
  BackgroundColor #FFF3E0
  BorderColor #E65100
  HeaderBackgroundColor #F57C00
  HeaderFontColor #FFFFFF
}
skinparam note {
  BackgroundColor #F3E5F5
  BorderColor #7B1FA2
}

' ─────────────────────────────────────────
' CLASES PRINCIPALES DE DOMINIO
' ─────────────────────────────────────────

class Board {
  - shape: BoardShape
  - arrows: Map<String, Arrow>
  - grid: Map<String, String>
  - graph: BoardGraph
  --
  - Board(shape: BoardShape, arrows: Map<String, Arrow>)
  + getArrowAt(position: Position): Arrow?
  + removeArrow(arrowId: String): void
  + forceRemoveArrow(arrowId: String): void
  + getActivatableArrows(): List<String>
  + isActivatable(arrowId: String): bool
  + getHint(): String?
  + isEmpty(): bool
  + getArrows(): Map<String, Arrow>
  + getShape(): BoardShape
}

note right of Board
  forceRemoveArrow() — para el martillo:
  elimina la flecha sin verificar
  si es activable (bypasa el grafo).
  getHint() — devuelve el primer
  arrowId activable según el grafo.
end note

class GameSession {
  - board: Board
  - levelId: String
  - score: int
  - moves: int
  - maxMoves: int
  - timeRemaining: int?
  - state: IGameState
  --
  - GameSession(board: Board, levelId: String, maxMoves: int, timeLimit: TimeLimit?)
  + executeMove(arrowId: String): MoveResult
  + applyPowerUp(powerUp: PowerUp): PowerUpResult
  + pause(): void
  + resume(): void
  + tick(): void
  + getBoard(): Board
  + getScore(): int
  + getMoves(): int
  + getState(): IGameState
  + isOver(): bool
  + isTimedLevel(): bool
}

note right of GameSession
  Patrón State (Comportamiento).
  executeMove() delega en state.handle().
  pause() → transición a PausedState.
  resume() → transición a PlayingState.
  tick() → descuenta 1s; si llega a 0
  y es nivel cronometrado → DefeatState.
end note

class Level {
  - id: String
  - difficulty: String
  - boardLayout: String
  - moveLimit: int
  - timeLimit: TimeLimit?
  --
  - Level(id: String, difficulty: String, boardLayout: String, moveLimit: int, timeLimit: TimeLimit?)
  + getId(): String
  + getBoardShape(): BoardShape
  + getMoveLimit(): int
  + getDifficulty(): String
  + getBoardLayout(): String
  + getTimeLimit(): TimeLimit?
  + isTimed(): bool
}

class Arrow {
  - id: String
  - segments: List<ArrowSegment>
  - color: ArrowColor
  --
  - Arrow(id: String, segments: List<ArrowSegment>, color: ArrowColor)
  + getId(): String
  + getHead(): ArrowSegment
  + getDirection(): Direction
  + getSegments(): List<ArrowSegment>
  + getColor(): ArrowColor
}

class MoveResult {
  - success: bool
  - arrowId: String
  - exitedSegments: List<ArrowSegment>
  --
  + {static} success(arrowId: String, segments: List<ArrowSegment>): MoveResult
  + {static} failure(arrowId: String): MoveResult
  + isSuccess(): bool
  + getArrowId(): String
  + getExitedSegments(): List<ArrowSegment>
}

class GameProgress {
  - userId: String
  - completedLevels: List<String>
  - bestScores: Map<String, int>
  - coins: int
  --
  + isCompleted(levelId: String): bool
  + getBestScore(levelId: String): int
  + recordCompletion(levelId: String, score: int): void
  + getCoins(): int
  + addCoins(amount: int): void
  + spendCoins(amount: int): bool
}

' ─────────────────────────────────────────
' PATRÓN STATE (Comportamiento)
' ─────────────────────────────────────────

interface IGameState {
  + handle(arrowId: String, board: Board): MoveResult
  + isPlaying(): bool
  + isOver(): bool
  + getLabel(): String
}

note right of IGameState
  Patrón State (Comportamiento).
  Define el contrato para cada estado
  de la partida. GameSession delega en
  la implementación activa — sin if/else.
end note

class PlayingState {
  --
  + handle(arrowId: String, board: Board): MoveResult
  + isPlaying(): bool
  + isOver(): bool
  + getLabel(): String
}

class PausedState {
  --
  + handle(arrowId: String, board: Board): MoveResult
  + isPlaying(): bool
  + isOver(): bool
  + getLabel(): String
}

note bottom of PausedState
  handle() rechaza cualquier movimiento
  (el juego está pausado).
  isPlaying() → false. isOver() → false.
end note

class VictoryState {
  --
  + handle(arrowId: String, board: Board): MoveResult
  + isPlaying(): bool
  + isOver(): bool
  + getLabel(): String
}

class DefeatState {
  --
  + handle(arrowId: String, board: Board): MoveResult
  + isPlaying(): bool
  + isOver(): bool
  + getLabel(): String
}

' ─────────────────────────────────────────
' POSICIÓN, DIRECCIÓN Y SEGMENTO
' ─────────────────────────────────────────

class Position {
  - x: int
  - y: int
  --
  - Position(x: int, y: int)
  + getX(): int
  + getY(): int
  + translate(direction: Direction): Position
  + equals(other: Position): bool
  + toKey(): String
}

class Direction {
  - dx: int
  - dy: int
  --
  - Direction(dx: int, dy: int)
  + {static} up(): Direction
  + {static} down(): Direction
  + {static} left(): Direction
  + {static} right(): Direction
  + getDx(): int
  + getDy(): int
  + opposite(): Direction
  + equals(other: Direction): bool
}

note bottom of Direction
  Patrón Factory Method (Creacional).
  Constructor privado + factories estáticos:
  up(), down(), left(), right().
  Solo se crean instancias válidas.
  Mismo patrón en ArrowColor.
end note

class ArrowSegment {
  - position: Position
  - directionToNext: Direction
  --
  - ArrowSegment(position: Position, directionToNext: Direction)
  + getPosition(): Position
  + getDirectionToNext(): Direction
}

class BoardShape {
  - validCells: Set<String>
  --
  - BoardShape(validCells: Set<String>)
  + {static} fromJson(json: String): BoardShape
  + contains(position: Position): bool
  + isExitFrom(position: Position, direction: Direction): bool
  + getCells(): List<Position>
  + size(): int
}

note bottom of BoardShape
  validCells: Set<String> — colección de
  elementos únicos con búsqueda O(1).
  Cada elemento es la clave "x,y".
  Parsea el boardLayout JSON del backend.
  Define la forma: corazón, cruz, cuadrado…
end note

class TimeLimit {
  - seconds: int
  --
  - TimeLimit(seconds: int)
  + {static} none(): TimeLimit
  + {static} of(seconds: int): TimeLimit
  + getValue(): int
  + hasLimit(): bool
  + equals(other: TimeLimit): bool
}

note right of TimeLimit
  Niveles HARD tienen cronómetro.
  TimeLimit.none() representa un
  nivel sin límite de tiempo.
  GameSession.tick() lo usa para
  saber si debe terminar la partida.
end note

class ArrowColor {
  - value: String
  --
  - ArrowColor(value: String)
  + {static} fromHex(hex: String): ArrowColor
  + getValue(): String
  + equals(other: ArrowColor): bool
}

' ─────────────────────────────────────────
' GRAFO DE DEPENDENCIAS
' ─────────────────────────────────────────

class BoardGraph {
  - nodes: Map<String, ArrowNode>
  --
  - BoardGraph()
  + build(arrows: Map<String, Arrow>, shape: BoardShape): void
  + removeArrow(arrowId: String): void
  + getActivatable(): List<String>
  + isActivatable(arrowId: String): bool
  + size(): int
}

class ArrowNode {
  - arrowId: String
  - blockedBy: Set<String>
  --
  - ArrowNode(arrowId: String, blockedBy: Set<String>)
  + getArrowId(): String
  + isActivatable(): bool
  + removeBlocker(blockerId: String): void
  + getBlockers(): Set<String>
}

note left of BoardGraph
  Núcleo del motor del juego.
  Nodo = flecha. Arista = "A bloqueada
  por B" si B está en el camino de A.
  Activable = blockedBy vacío.
  Al salir una flecha: se elimina su
  nodo y se desbloquean dependientes.
end note

' ─────────────────────────────────────────
' PATRÓN BUILDER (Creacional)
' ─────────────────────────────────────────

class BoardBuilder <<Builder>> {
  - shape: BoardShape
  - arrows: List<Arrow>
  --
  - BoardBuilder()
  + {static} create(): BoardBuilder
  + setShape(shape: BoardShape): BoardBuilder
  + addArrow(arrow: Arrow): BoardBuilder
  + build(): Board
}

note right of BoardBuilder
  Patrón Builder (Creacional).
  Construye un Board paso a paso
  desde el boardLayout JSON del backend.
  Usado por LoadLevelUseCase (Capa 2).
end note

' ─────────────────────────────────────────
' PATRÓN TEMPLATE METHOD — Power-ups
' ─────────────────────────────────────────

abstract class PowerUp <<Template Method>> {
  --
  + final use(board: Board): PowerUpResult
  # canApply(board: Board): bool
  # {abstract} apply(board: Board): void
  + {abstract} getCost(): int
  + {abstract} getType(): String
}

note right of PowerUp
  Patrón Template Method (Comportamiento).
  use() es el método plantilla:
    1. canApply() — valida (hook, override opcional)
    2. apply()    — aplica el efecto (hook abstracto)
  Agregar un nuevo power-up = implementar
  apply() y getCost() únicamente.
  No hay que tocar la base.
end note

class HintPowerUp {
  --
  # canApply(board: Board): bool
  # apply(board: Board): void
  + getCost(): int
  + getType(): String
}

note bottom of HintPowerUp
  apply() → resalta board.getHint()
  (primer arrowId activable del grafo).
  canApply() → false si no hay activables.
end note

class HammerPowerUp {
  - targetArrowId: String
  --
  # canApply(board: Board): bool
  # apply(board: Board): void
  + getCost(): int
  + getType(): String
}

note bottom of HammerPowerUp
  apply() → llama board.forceRemoveArrow()
  Elimina la flecha sin importar si
  está bloqueada. Actualiza el grafo.
end note

class MagnetPowerUp {
  - direction: Direction
  --
  # canApply(board: Board): bool
  # apply(board: Board): void
  + getCost(): int
  + getType(): String
}

note bottom of MagnetPowerUp
  apply() → activa todas las flechas
  que apuntan en la dirección indicada
  y tienen el camino libre.
end note

class PowerUpResult {
  - success: bool
  - affectedArrowId: String?
  - message: String?
  --
  + {static} success(arrowId: String?): PowerUpResult
  + {static} failure(message: String): PowerUpResult
  + isSuccess(): bool
  + getAffectedArrowId(): String?
}

' ─────────────────────────────────────────
' VALIDADOR
' ─────────────────────────────────────────

class LevelValidator {
  --
  + validate(level: Level): bool
  + isSolvable(board: Board): bool
}

' ─────────────────────────────────────────
' PORTS — definidos en Capa 1,
' implementados en Capa 3,
' usados en Capa 2
' ─────────────────────────────────────────

interface ILevelRepository {
  + getLevel(levelId: String): Level
  + getLevels(): List<Level>
  + getLevelsByDifficulty(difficulty: String): List<Level>
}

interface IGameProgressRepository {
  + save(progress: GameProgress): void
  + get(userId: String): GameProgress?
  + sync(userId: String): GameProgress
}

' ─────────────────────────────────────────
' RELACIONES
' ─────────────────────────────────────────

' GameSession
GameSession *-- "1" Board       : board
GameSession *-- "1" IGameState  : state
GameSession ..> MoveResult      : <<returns>>
GameSession ..> PowerUpResult   : <<returns>>
GameSession --> PowerUp         : uses

' Patrón State
PlayingState  ..|> IGameState
PausedState   ..|> IGameState
VictoryState  ..|> IGameState
DefeatState   ..|> IGameState
IGameState    --> Board : uses

' Board
Board *-- "1"    BoardShape : shape
Board *-- "0..*" Arrow      : arrows
Board *-- "1"    BoardGraph : graph

' Arrow
Arrow *-- "1..*" ArrowSegment : segments
Arrow *-- "1"    ArrowColor   : color

' ArrowSegment
ArrowSegment *-- "1" Position  : position
ArrowSegment *-- "1" Direction : directionToNext

' MoveResult
MoveResult *-- "0..*" ArrowSegment : exitedSegments

' BoardGraph
BoardGraph *-- "0..*" ArrowNode : nodes

' Patrón Template Method — Power-ups
HintPowerUp   --|> PowerUp
HammerPowerUp --|> PowerUp
MagnetPowerUp --|> PowerUp
PowerUp       ..> Board          : uses
PowerUp       ..> PowerUpResult  : <<returns>>
HammerPowerUp *-- "1" Direction  : targetDirection
MagnetPowerUp *-- "1" Direction  : direction

' Level
Level ..> BoardShape : <<produces>>
Level *-- "1" TimeLimit : timeLimit

' BoardBuilder
BoardBuilder ..> Board      : <<creates>>
BoardBuilder --> BoardShape : uses
BoardBuilder --> Arrow      : uses

' Ports
IGameProgressRepository ..> GameProgress : <<manages>>

' LevelValidator
LevelValidator --> Level : validates
LevelValidator --> Board : validates

@enduml
